--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,14 @@
 <div class="footer text-center">
   <p>&copy; Club Incense 2013</p>
+  Suggestions? Drop us a line at suggest@clubincense.com
+  <br/>
+  <a href="#" 
+  onclick="
+    window.open(
+      'https://www.facebook.com/sharer/sharer.php?u=', 
+      'facebook-share-dialog', 
+      'width=626,height=436'); 
+    return false;">
+  Share us on Facebook!
+</a>
 </div>
