--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,12 +1,12 @@
   <div class="jumbotron">
-    <h1>Incense at your doorstep every month!</h1>
-    <p class="lead">Recieve a different scent of premium incense every month. Forget the hassle of trying to discover a new blend.</p>
-    <a class="btn btn-large btn-success" href="#sign-up">Sign up today</a>
+    <h1>Incense delivered to you</h1>
+    <p class="lead">
+    	Recieve premium incense every month. Discover new blends. Share your experiences with the community.
+    </p>
+    <a class="btn btn-large btn-success" href="#sign-up">Sign Up today!</a>
   </div>
 
-  <hr>
-
-  <div class="row-fluid marketing" id="about">
+  <div class="row-fluid info" id="about">
     <div class="span6">
       <h4>Subheading</h4>
       <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
@@ -18,7 +18,5 @@
       <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
     </div>
   </div>
-
-  <hr>
 
 <%= render 'layouts/notified' %>
