--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 	<%= render 'layouts/footer' %>
 </div> <!-- /container -->
 
+<!-- load js after html -->
 <%= javascript_include_tag "application" %>
 </body>
 </html>
