--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,7 +1,7 @@
   <div class="jumbotron">
-    <h1>Incense delivered to you</h1>
+    <h1>Incense delivered to you every month</h1>
     <p class="lead">
-    	Recieve premium incense every month. Discover new blends. Share your experiences with the community.
+    	Recieve premium incense every month. Discover new blends based on your mood and activities. Share your experiences with the community.
     </p>
     <a class="btn btn-large btn-success" href="#sign-up">Sign Up today!</a>
   </div>
