Add back link to Thankyou page

--- a/app/views/signups/thankyou.html.erb
+++ b/app/views/signups/thankyou.html.erb
@@ -3,6 +3,8 @@
 	<p class="lead">
 		We'll be in touch shortly :) In the meantime feel free to reach out to us with any suggestions and/or spread the word to your friends!
 	</p>
+
+	<a href="/">Back</a>
 </div>
 
 <hr>
