--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -8,14 +8,16 @@
 
   <div class="row-fluid info" id="about">
     <div class="span6">
-      <h4>Subheading</h4>
-      <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-      <h4>Subheading</h4>
-      <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-      <h4>Subheading</h4>
-      <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+      <i class="icon-magic icon-4x"></i>
+      <h4>Pick the package you like based on your activities and moods</h4>
+      <br/>
+      <br/>
+      <i class="icon-truck icon-4x"></i>
+      <h4>We'll deliver a different blend catered towards your tastes every month</h4>
+      <br/>
+      <br/>
+      <i class="icon-smile icon-4x"></i>
+      <h4>Sit-back, stand-up, lay-down, or get moving with your fresh incense!</h4>
     </div>
   </div>
 
